<resources>
    <string name="app_name">DinoFoods 🦖</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_foods">FoodsActivity</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se</string>
    <string name="dinofoods">DinoFoods 🦖</string>
    <string name="email">Email</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="registrar">registrar</string>
    <string name="voltar">Voltar</string>
    <string name="eslogam">O melhor lanche da sua cidade</string>
    <string name="adicionar">+ Adicionar</string>
    <string name="preco">R$ 0,00</string>
    <string name="remover_item">Remover item</string>
    <string name="search">Buscar no cardápio...</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="total">Total: R$ 0,00</string>
    <string name="carrinho">Meu Carrinho</string>
    <string name="sem_conta">Não tem conta? Cadastre-se</string>
    <string name="adicionado_sucesso">"Adicionado com sucesso "</string>
    <string name="preco_formatado">R$ %.2f</string>
    <string name="pedidos">Pedidos</string>
    <string name="sair">Sair</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="user">User</string>
    <string name="teste_gmail_com">teste@gmail.com</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="meus_endere_os">Meus Endereços</string>
    <string name="sair_da_conta">Sair da Conta</string>
    <string name="adicione_itens_primeiro">Adicione itens primeiro!</string>
    <string name="total_r_2f">Total: R$ %.2f</string>
    <string name="erro_ao_enviar_pedido">Erro ao enviar pedido!</string>
    <string name="pedido_enviado">Pedido enviado! 🍽️</string>
    <string name="vautenticado">Usuário não autenticado!</string>
    <string name="seu_carrinho_ficou_vazio">Seu carrinho ficou vazio!</string>
    <string name="ol">Olá, %1$s!</string>
    <string name="sem_pedidos">Você ainda não tem pedidos.</string>
    <string name="erro_pedidos">Erro ao carregar pedidos</string>
    <string name="cadastro_salvos">Cadastro e Perfil salvos!</string>
    <string name="erro_appwrite">Erro Appwrite: %1$s</string>
    <string name="erro_firebase">Erro Firebase: %1$s</string>
    <string name="campos">Preencha todos os campos</string>
    <string name="erro">Erro: %1$s</string>
    <string name="login">Login realizado com sucesso!</string>
    <string name="item_desconhecido">Item desconhecido</string>
    <string name="json">Erro ao processar itens ou formato antigo:\n%1$s</string>
    <string name="tpedido">\nTotal do Pedido: R$ %.2f</string>
    <string name="carrinho_vazio">O carrinho está vazio!</string>
    <string name="adicionado">%1$s !</string>
    <string name="adicionadoItem">%1$s adicionado!</string>
    <string name="esqueci_senha">Esqueceu sua senha ?</string>
    <string name="endereco_salvo">Endereço salvo com sucesso!</string>
    <string name="erro_endereco">Erro ao salvar endereço.</string>
    <string name="dino_entrega">Dino Entrega Aqui!</string>
    <string name="ligar_gps">Ligue o GPS para obter a localização.</string>
    <string name="erro_busca">Erro na busca: %1$s</string>
    <string name="digite_endereco">Digite um endereço para buscar</string>
    <string name="selecione_endereco">Por favor, selecione um endereço.</string>
    <string name="oentrar">Onde o seu Dino Snack deve ser entregue?</string>
    <string name="usar_localiza_o_atual">Usar Localização Atual</string>
    <string name="endere_o_completo">Endereço Completo</string>
    <string name="buscar_endereco">Buscar endereço</string>
    <string name="confirmar_endereco">Confirmar Endereço</string>
    <string name="administra_o">Administração</string>
    <string name="texto_padrao">Hambúrguer Especial</string>
    <string name="preco_padrao">R$ 29,90</string>
</resources>