<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/meu_perfil" />
        <item
            android:id="@+id/nav_ordes"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/sair" />
        <item
            android:id="@+id/nav_adm"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/administra_o" />
    </group>
</menu>